--- a/style/style.css
+++ b/style/style.css
@@ -10,18 +10,48 @@ header{
     width: 100%;
     background-image: url(../assets/imagenes/banner-bk.jpg);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
     flex-direction: column;
 }
 
+#logo{
+    width: 100%;
+    height: 30%;
+    color: #ffffff;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+#logoHeader1{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: auto;
+    width: 500px;
+    padding: 0% 5%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--color-terciario);
+}
+
+#logoHeader2{
+    height: 100px;
+    width: 100px;
+}
+
+
 .containerHeader{
+    width: 50%;
+    height: 70%;
     color: #ffffff;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-    padding: 5%;
+    padding: 2%;
 }
 
 #h1Header{
@@ -31,3 +61,49 @@ header{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#textoHeader{
+    padding: 5% 0px;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+}
+:root{
+    --color-principal: #00ee9f;
+    --color-secundario: #000000;
+    --color-terciario: #ffffff;
+}
+
+#btnHeader{
+    width: 180px;
+    height: 50px;
+    border: none;
+    border-radius: 20px;
+    background-color:var(--color-principal);
+    color: #000000;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+nav{
+    height: 30vh;
+    width: 100%;
+    background-color: var(--color-terciario);
+    display: flex;
+    flex-direction: column;
+}
+
+#tituloNav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#imgNav{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: row;
+}
