--- a/style/style.css
+++ b/style/style.css
@@ -92,6 +92,7 @@ nav{
     width: 100%;
     background-color: var(--color-terciario);
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
 }
 
@@ -104,6 +105,13 @@ nav{
 #imgNav{
     display: flex;
     justify-content: center;
-    align-items: flex-end;
     flex-direction: row;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+}
+
+#imgNav img{
+    width: 100px;
+    height: 100px;
 }
