--- a/style/style.css
+++ b/style/style.css
@@ -88,30 +88,47 @@ header{
 }
 
 nav{
-    height: 30vh;
-    width: 100%;
-    background-color: var(--color-terciario);
     display: flex;
     justify-content: space-around;
     flex-direction: column;
 }
 
-#tituloNav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.section1-2{
+	padding: 3% 10px;
+	display: flex;
+	flex-direction: column;
+}
+#imgs-div{
+	display: flex;
+	justify-content: space-around;
+}
+#imgs2{
+    height: 200px;
+	width: 200px;
+}
+.titles-sect1-2{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+#html_word,#css_word,#brush_word{
+	display: flex;
+	font-size: 20px;
+	width: 427.489px;
+	padding: 20px 10px;
+	justify-content: center;
+}
+.lorem-sect1-2{
+	display: flex;
+	justify-content: space-evenly;
+	text-align: center;
 }
 
-#imgNav{
+#titleNav{
     display: flex;
     justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    height: 100px;
-    width: 100px;
-}
-
-#imgNav img{
-    width: 100px;
-    height: 100px;
+    font-size: 40px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
 }
