--- a/style/style.css
+++ b/style/style.css
@@ -20,24 +20,27 @@ header{
     height: 30%;
     color: #ffffff;
     display: flex;
-    flex-direction: row-reverse;
+    justify-content:space-between;
+    flex-direction: reverse;
     align-items: center;
-    justify-content: space-around;
+
 
 }
 
-#logoHeader1{
+#logo1Header{
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
-    height: auto;
-    width: 500px;
     padding: 0% 5%;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--color-terciario);
 }
 
 #logoHeader2{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0px 5%;
     height: 100px;
     width: 100px;
 }
@@ -51,7 +54,7 @@ header{
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-    padding: 2%;
+    padding: 4% 5% ;
 }
 
 #h1Header{
@@ -71,6 +74,8 @@ header{
     --color-principal: #00ee9f;
     --color-secundario: #000000;
     --color-terciario: #ffffff;
+    --color-cuarto: #00113f;
+
 }
 
 #btnHeader{
@@ -134,7 +139,7 @@ nav{
 }
 
 main{
-    height: 87vh;
+    height: 100vh;
     width: 100%;
     background-image: url(../assets/imagenes/fondo\ seccion\ 2.png);
     background-size: cover;
@@ -143,3 +148,49 @@ main{
     justify-content: center;
     align-items: center;
 }
+
+#section1{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#secion1-div{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 40%;
+    height: 100%;
+}
+
+h1{
+    font-size: 70px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p{
+    font-size: 20px;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#botonsec1{
+    width: 180px;
+    height: 50px;
+    border: none;
+    border-radius: 20px;
+    background-color:var(--color-cuarto);
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    cursor: pointer;
+}
+ 
