--- a/style/style.css
+++ b/style/style.css
@@ -193,4 +193,64 @@ p{
     margin-top: 20px;
     cursor: pointer;
 }
- 
+
+.section2{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: 100px 0px;
+}
+
+#seccion2-h1{
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.containerSec2{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px 50px;
+    width: 100%;
+    height: 100%;
+}
+
+
+#sec2Tex{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px 100px;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#sec2TexN{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px 80px;
+    font-size: 20px;
+    font-weight: 400;
+    background-color: #1c2841;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#botonSec2{
+
+    color: black; 
+    padding: 7px 7px; 
+    cursor: pointer; 
+    border-radius: 20px;
+    border: none;
+    background-color: white;
+    border: 2px solid #000000; 
+}
