teminacion de la pagina de computador

--- a/styles/style.css
+++ b/styles/style.css
@@ -309,12 +309,27 @@ p{
 }
 
 #espacio{
-    padding: 0px 50px;
+    padding: 5px 23px;
 }
 
 #color{
+
+    height: 30px;
     background-color:transparent;
     border: 1px solid var(--color-principal)
+}
+
+#btnMessage{
+    width: 380px;
+    height: 50px;
+    border: none;
+    border-radius: 20px;
+    background-color:var(--color-principal);
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
 }
 
 footer{
