--- a/styles/style.css
+++ b/styles/style.css
@@ -319,7 +319,7 @@ p{
     border: 1px solid var(--color-principal)
 }
 
-#btnMessage{
+#btn{
     width: 380px;
     height: 50px;
     border: none;
