--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ header{
     width: 100%;
     background-image: url(imagenes/banner-bk.jpg);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start;
     flex-direction: column;
 }
@@ -351,3 +351,27 @@ footer{
 }
 
 
+@media (max-width: 1250px) {
+    .containerHeader{
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        height: 100%;
+        padding: 0% 17px ;
+        width: 100%;
+        height: auto;
+    }
+
+    #textoHeader{
+        justify-content: space-around;
+        flex-wrap: wrap;
+        padding: 5px 17px ;
+    }
+
+    #h1Header{
+        margin: 0% ;
+    }
+
+  }
