--- a/styles/style.css
+++ b/styles/style.css
@@ -317,7 +317,7 @@ p{
 }
 
 #color{
-
+    color: white;
     height: 30px;
     background-color:transparent;
     border: 1px solid var(--color-principal)
@@ -486,7 +486,7 @@ footer{
         padding: 0% 10px;
     }
 
-    #section1{
+    .section4{
         padding: 0%;
     }
   }
