--- a/styles/style.css
+++ b/styles/style.css
@@ -447,15 +447,14 @@ footer{
 
     #section1{
         flex-direction: column;
-        padding: 10px ;
+        padding: 0px ;
         font-size: 1px;
     }
     .inputs{
         width: 300px;
-        justify-content: flex-end;
-        align-items: flex-start;
-        flex-wrap: wrap;
-        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0%;
     }
 
     #datos{
